Prevent carousel arrows from overlapping megamenu
I'd have to set the z-index of the megamenu to something like 10000000
to override slick. This !important is better

Fixes 71427-292

--- a/app/design/frontend/Travers/default/styles/blocks/_bluefoot.scss
+++ b/app/design/frontend/Travers/default/styles/blocks/_bluefoot.scss
@@ -268,7 +268,7 @@ $home-sidebar-width: 20.5%;
 .slick-arrow {
     background-color: transparent !important; // override slick
     color: $c-royal;
-    z-index: 1;
+    z-index: 1 !important; // override slick
 
     @include max-screen($screen__m) {
         display: none !important; // override slick
